HelloUltraviolet/Fixtures/RejectedSource/Parsing/MissingStatementTerminator/Expected.uv
//! Expected diagnostic metadata for the MissingStatementTerminator rejected-source specimen.

expectedDiagnostic("E-SRC-0510", "Missing-Terminator-Err")
